# pet-protect-cli

./: .cruft.json  .cz.toml  .mypy.ini  README.md  flake.nix  mkdocs.yml  pyproject.toml  tox.ini
.github/: settings.yml
pet_protect_cli/: __init__.py
tests/: test_packaging_attribute.py
