[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pet-protect-cli"
description = "CLI for the Pet Protect project"
version = "0.0.0"
authors = [{name = "Clément Dubos", email = "contact@cdubos.fr"}]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pet-protect-cli[typing]",
    "pet-protect-cli[tests]",
    "pet-protect-cli[docs]",
]
typing = ["mypy"]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-lazy-fixture",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.flit.module]
name = "pet_protect_cli"

[tool.pdm]
distribution = false
